--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,12 @@ android {
     buildFeatures {
         viewBinding = true
     }
+
+    flavorDimensions 'version'
+    productFlavors {
+        usePendingIntent {}
+        useLocationCallback {}
+    }
 }
 
 dependencies {
